Sensor fetching; Documentation; Update gitignore
